--- a/programs.html
+++ b/programs.html
@@ -157,7 +157,7 @@
                         <h2>حفظ القرآن الكريم</h2>
                         <h3>(باقة المبتدئ)</h3>
                         <div class="image">
-                            <span>۳۰۰ جنيه</span>
+                            <span>٤۰۰ جنيه</span>
                             <img src="photo/quraan level1.jpg" alt="">
                         </div>
                         <span class="course-contact"><a href="https://wa.me/201113328011">أشترك الأن</a></span>
@@ -168,7 +168,7 @@
                         <ul>
                             <li>نظام الدفع شهري</li>
                             <li>حصة أسبوعيا</li>
-                            <li>مدة الحصة 30 دقيقة</li>
+                            <li>مدة الحصة ساعة واحدة</li>
                             <li>الحفظ + مراجعة + تصحيح التلاوة + أحكام تجويد بسيطة</li>
                             <li>واجب منزلي أسبوعي بصوت (Voice Message)</li>
                             <li>اختبار شهري لمعرفة مستوى الطالب</li>
@@ -183,7 +183,7 @@
                         <h2>حفظ القرآن الكريم</h2>
                         <h3>(باقة المتابعة)</h3>
                         <div class="image">
-                            <span>٥۰۰ جنيه</span>
+                            <span>۷۰۰ جنيه</span>
                             <img src="photo/quraan level2.jpg" alt="">
                         </div>
                         <span class="course-contact"><a href="https://wa.me/201113328011">أشترك الأن</a></span>
@@ -194,33 +194,7 @@
                         <ul>
                             <li>نظام الدفع شهري</li>
                             <li>حصتين أسبوعيا</li>
-                            <li>مدة الحصة 30 دقيقة</li>
-                            <li>الحفظ + مراجعة + تصحيح التلاوة + أحكام تجويد بسيطة</li>
-                            <li>واجب منزلي أسبوعي بصوت (Voice Message)</li>
-                            <li>اختبار شهري لمعرفة مستوى الطالب</li>
-                            <li>شهادات تشجيعية</li>
-                        </ul>
-                    </div>
-                    </div>
-                </div>
-                <div class="courseitem">
-                    <div class="inner">
-                        <div class="frontcard">
-                        <h2>حفظ القرآن الكريم</h2>
-                        <h3>(باقة مكثفة)</h3>
-                        <div class="image">
-                            <span>۹۰۰ جنيه</span>
-                            <img src="photo/quraan level 3.jpg" alt="">
-                        </div>
-                        <span class="course-contact"><a href="https://wa.me/201113328011">أشترك الأن</a></span>
-                        <span>عرض التفاصيل</span>
-                    </div>
-                    <div class="backcard">
-                        <h2>محتوي الدوره</h2>
-                        <ul>
-                            <li>نظام الدفع شهري</li>
-                            <li>۳ حصص أسبوعيا</li>
-                            <li>مدة الحصة 30 دقيقة</li>
+                            <li>مدة الحصة ساعة واحدة</li>
                             <li>الحفظ + مراجعة + تصحيح التلاوة + أحكام تجويد بسيطة</li>
                             <li>واجب منزلي أسبوعي بصوت (Voice Message)</li>
                             <li>اختبار شهري لمعرفة مستوى الطالب</li>
